--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,8 @@ url = "https://pypi.python.org/simple"
 name = "pypi"
 
 [packages]
-django = "==2.0.1"
-requests = "*"
+requests = "2.23.0"
+django = "3.0.5"
 
 [requires]
 python_version = "3.6"
